Migration to springboot 3.2